[package]
name = "hzrd"
version = "0.0.6"
edition = "2021"
authors = ["Herman Skogseth"]
rust-version = "1.70"
description = "Shared mutability containers based on hazard pointers"
repository = "https://github.com/skogseth/hzrd/"
license = "MIT"

[[bin]]
name = "local-writer"
path = "benchmarks/local-writer.rs"

[[bin]]
name = "single-threaded"
path = "benchmarks/single-threaded.rs"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "back-and-forth"
harness = false
