[package]
name = "hzrd"
version = "0.0.6"
edition = "2021"
authors = ["Herman Skogseth"]
rust-version = "1.70"
description = "Shared mutability containers based on hazard pointers"
repository = "https://github.com/skogseth/hzrd/"
license = "MIT"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2", features = ["checkpoint"] }

[profile.loom]
inherits = "release"
debug = true
overflow-checks = true
debug-assertions = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "macro"
harness = false
